@@ -296,6 +296,7 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 19355) Added .xhtml, .xht to upload file extension blacklist
 * (bug 19287) Workaround for lag on history page in Firefox 3.5
 * (bug 19564) Updated docs/hooks.txt
+* (bug 18751) Fix for buggage in profiling setup for some extensions on PHP 5.1
 
 == API changes in 1.16 ==
 
